# OOPjava

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ACADEMIC_COMPLIANCE_REPORT.md  ADMIN_CONFIGURATION.md  BOOKING_LIFECYCLE_EXPLAINED.md  CLASS_DIAGRAM_STRUCTURE.md  COMPLETE_API_TESTS.md  DZ-TourGuide API - Complete Collection.postman_collection.json  DZ-TourGuide API-Complete Collection.postman_collection.json  DZ-TourGuide Environment.postman_environment.json  DZ-TourGuide.postman_collection.json  DZ-TourGuide.postman_environment.json  GUIDE_AVAILABILITY_API_DEMO.md  POSTMAN.md  POSTMAN_TESTS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  missing_endpoints_analysis.md  notes.txt  postman_testing_flow.md  pyproject.toml  requirements-dev.txt  requirements.txt
server/: db.sqlite3  db.sqlite3.backup-before-fix  pytest.ini  test_cert.txt  tests.py
server/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
server/bookings/: admin.py  models.py  serializers.py  urls.py  views.py
server/locations/: admin.py  models.py  serializers.py  urls.py  views.py
server/logs/: .gitkeep
server/messaging/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
server/profiles/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
server/server/: admin.py  settings.py  urls.py
server/tests/: test_api_integration.py  test_business_logic.py  test_e2e_simple.py
server/tours/: admin.py  models.py  serializers.py  urls.py  views.py
(+28 files in other folders)
